tests/fixtures/LatestTests/TypeConversionFunctionTests/errors/char_from_deci.fg
/; EXPECT_ERROR: FunctionArgumentTypeMismatch
print(Char(3.14))

